<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondActivity" android:id="@+id/relativeLayout" tools:layout_editor_absoluteY="81dp">

    <TextView
            android:text="@string/temperature"
            android:layout_width="215dp"
            android:layout_height="0dp"
            android:id="@+id/temperature" android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginBottom="40dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/gitHubButton"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:text="@string/my_github_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gitHubButton"
            android:contentDescription="@string/github_button"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/temperature"
            android:layout_marginEnd="28dp" android:layout_marginBottom="63dp"
            app:layout_constraintEnd_toEndOf="@+id/temperature"/>
    <TextView
            android:text="@string/about_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/aboutMe"
            app:layout_constraintStart_toStartOf="@+id/myAvatar2"
            android:layout_marginStart="20dp" app:layout_constraintTop_toBottomOf="@+id/myName2"
            android:layout_marginBottom="25dp" app:layout_constraintBottom_toTopOf="@+id/textInputLayout"/>
    <TextView
            android:text="@string/master_yoda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myName2" android:textSize="24sp"
            android:textStyle="bold" android:textAlignment="center"
            tools:text="@string/master_yoda"
            android:layout_marginTop="85dp"
            app:layout_constraintStart_toEndOf="@+id/myAvatar2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="68dp" app:layout_constraintBottom_toTopOf="@+id/aboutMe"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="47dp"
    />
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/myAvatar2"
            android:contentDescription="@string/avatar"
            tools:srcCompat="@drawable/master_yoda"
            app:srcCompat="@drawable/master_yoda"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toStartOf="@+id/myName2" android:layout_marginBottom="40dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="27dp"
            app:layout_constraintBottom_toBottomOf="@+id/aboutMe" android:layout_marginEnd="31dp"
    />
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:counterMaxLength="120" android:id="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/aboutMe" android:layout_marginBottom="26dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/temperature"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="120"/>
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>