<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" tools:srcCompat="@drawable/master_yoda"
            android:id="@+id/myAvatar2"
            android:contentDescription="@avatar"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toStartOf="@+id/myName" app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="17dp"
    />
    <TextView
            android:text="@string/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myName" android:textSize="24sp"
            android:textStyle="bold" android:textAlignment="center"
            tools:text="Master Yoda"
            android:layout_marginTop="119dp" app:layout_constraintStart_toEndOf="@+id/myAvatar2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="146dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="63dp"/>
    <TextView
            android:text="@string/about_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/myAvatar2" app:layout_constraintTop_toBottomOf="@+id/myAvatar2"
            android:layout_marginBottom="17dp" app:layout_constraintBottom_toTopOf="@+id/textInputLayout"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/myName" android:layout_marginBottom="219dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:counterMaxLength="120">

    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/my_github_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gitHubButton"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="29dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginBottom="30dp"
            tools:text="@string/my_github_profile"/>
    <TextView
            android:text="@string/temperature"
            android:layout_width="215dp"
            android:layout_height="0dp"
            android:id="@+id/textView4" android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginBottom="25dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/gitHubButton"
            app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>